# k8scp-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
