[package]
name = "k8scp-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
indicatif = "0.17.1"
kube = { version = "0.76.0", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.16.0", features = ["v1_18"] }
tokio = { version = "1.14.0", features = ["full"] }
serde_json = "1.0.87"
tracing = "0.1.37"
futures = "0.3.25"
anyhow = "1.0.66"
tracing-subscriber = "0.3.16"
